@@ -16,7 +16,7 @@ Build-Depends:
  libedit-dev,
  libgeoip-dev,
  libgnutls28-dev,
- libknot-dev (>= 2.7.2),
+ libknot-dev (>= 2.7.6),
  liblmdb-dev,
  libluajit-5.1-dev,
  libsystemd-dev (>= 227) [linux-any],
